opam-version: "2.0"
synopsis: "A JIT compiler for jsonnet"
description: "A JIT compiler for jsonnet"
maintainer: ["Ushitora Anqou"]
authors: ["Ushitora Anqou"]
license: "MIT"
tags: ["jsonnet"]
homepage: "https://github.com/ushitora-anqou/jitsonnet"
doc: "https://github.com/ushitora-anqou/jitsonnet"
bug-reports: "https://github.com/ushitora-anqou/jitsonnet/issues"
depends: [
  "alcotest" {with-test}
  "cmdliner"
  "digestif"
  "dune" {>= "3.15"}
  "fmt"
  "logs"
  "menhir"
  "ocaml"
  "dtoa"
  "odoc" {with-doc}
  "ppx_deriving"
  "rope"
  "uutf"
  "uucp"
  "yaml"
  "yojson"
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ushitora-anqou/jitsonnet.git"
